Brush up spark/pom.xml (#361)